Mapstruct code implementation